--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-tables-2": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
