--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.0",
     "vue": "^3.1.0",
     "vue-tables-2": "^2.3.5"
   },
