--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
+    "plotly.js-dist": "^2.33.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.0",
     "vue": "^3.1.0",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13",
     "vue-tables-2": "^2.3.5",
     "vuedraggable": "^2.24.3",
