--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^3.1.0",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13",
