--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "@coreui/icons": "^3.0.1",
     "@coreui/vue": "^5.1.0",
     "@floating-ui/vue": "^1.0.6",
