--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "v-tooltip": "^2.1.3",
     "vue": "^3.1.0",
     "vue-chartjs": "^5.3.1",
+    "vue-progress-bar": "^1.0.1",
     "vue-router": "^4.0.13",
     "vue-tables-2": "^2.3.5",
     "vuedraggable": "^2.24.3",
